# internal/model/pagination.go
@@ -1,0 +1,7 @@
+package model
+
+type Pagination struct {
+	CurrentPage  int `json:"current_page"`
+	CountPerPage int `json:"count_per_page"`
+	Total        int `json:"total"`
+}
